update env form mshome.net to onexas2023.net update jdk to 11, fix compile warning